# storymaker

./: .gitignore  LICENSE  MANIFEST.in  README.md  characters.md  final.md  manuscript.json  manuscript.json5  packages.txt  pyproject.toml  requirements.txt  setup.cfg  story.md
.github/workflows/: upload_artifacts.yml
src/storymaker/: __init__.py  api_test.py  base_maker.py  classmodel.py  create_character.py  create_story.py  genre.py  theme.py  utils.py
src/storymaker/prompt/: characters.md  ehnance_story2.md  enhance_story.md  enhance_story1.md  enhance_story2.md  frontmatter.md  initial_story.md  system_prompt.md  title_synopsis.md
src/storymaker/test/input/: characters.md  news_jp.csv  news_today.csv
src/storymaker/test/output/story01/: final.md  story.md
