[build-system]
requires = ["setuptools >= 61",
            "wheel",
            "setuptools_scm[toml]>=6.0",
            ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/storymaker/_version.py"

[project]
name = "storymaker"
version = "1.0.6"
description = "Storymaker is a tool for creating stories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==1.84.0",
    "python-dotenv==1.0.1",
    "pydantic==2.11.5",
    "tiktoken==0.9.0",
    "json5==0.12.0",
]
