[metadata]
name = storymaker
version = 0.0.1
url= https://github.com/passive-radio/storymaker
author = passive-radio, Yudai Okubo
author_email = srccreator@gmail.com
license = MIT
license_file = LICENSE
description = A simple library for writing stories in ready to publish markdown format using LLM.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, story, markdown, llm
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/passive-radio/storymaker
    Source = https://github.com/passive-radio/storymaker

[options]
packages = find_namespace:
package_dir = 
    = src
python_requires = >=3.10
include_package_data = True

[options.package_data]
* = *.py, *.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    storymaker = storymaker:main
