[metadata]
name = storymaker
version = 1.0.7
url = https://github.com/passive-radio/storymaker
author = passive-radio, Yudai Okubo
author_email = srccreator@gmail.com
license = MIT
license_file = LICENSE
description = A simple library for writing stories in ready to publish markdown format using LLM.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, story, markdown, llm, openai, character
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: Markdown
project_urls =
    Documentation = https://github.com/passive-radio/storymaker
    Source = https://github.com/passive-radio/storymaker
    Tracker = https://github.com/passive-radio/storymaker/issues

[options]
packages = find_namespace:
package_dir = 
    = src
python_requires = >=3.10
include_package_data = True
install_requires =
    openai>=1.84.0
    pydantic>=2.11.5
    python-dotenv>=1.0.1
    tiktoken>=0.9.0
    json5>=0.12.0

[options.package_data]
* = *.py, *.md

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    storymaker = storymaker:main
